--- a/blog2.html
+++ b/blog2.html
@@ -20,20 +20,148 @@
         <video autoplay loop muted src="final_video.mp4"></video>
       </div>
       <div class="overtext">
-        <h1 class="text text-gradient">How to CODE?</h1>
+        <h1 class="text text-gradient">How to READ?</h1>
         <div class="content">
+          <h2>The Four Levels of Reading</h2>
           <p>
-            Go to the YouTube website and log in to your account, if needed.
+            Mortimer Adler literally wrote the book on reading. Adler identifies
+            four levels of reading:
           </p>
-        </div>
-        <div class="content">
-          <p>Click "CUSTOMIZE CHANNEL"</p>
-        </div>
-        <div class="content-img">
-          <img
-            src="https://colony-recorder.s3-accelerate.amazonaws.com/files/2021-11-18/35e65080-aab9-4cf3-abba-71f4f46bae8e/user_cropped_screenshot.jpeg?AWSAccessKeyId=AKIA2JDELI434TBIMF7V&Signature=fAdByU5VLwji0ZY8jEmS193P%2Flo%3D&Expires=1649628076"
-            alt="error"
-          />
+          <ol class="list">
+            <li>Elementary Reading</li>
+            <li>Inspectional Reading</li>
+            <li>Analytical Reading</li>
+            <li>Syntopical Reading</li>
+          </ol>
+          <h2>1. Elementary Reading</h2>
+          <p>
+            This is the level of reading taught in our elementary schools. If
+            you're reading this website, you already know how to do this
+          </p>
+          <h2>2. Inspectional Reading</h2>
+          <p>
+            We've been taught that skimming and superficial reading are bad for
+            understanding. That is not necessarily the case. Using these tools
+            effectively can increase understanding. Inspectional reading allows
+            us to look at the author's blueprint and evaluate the merits of a
+            deeper reading experience.
+          </p>
+          <p>There are two sub-types of inspectional reading:</p>
+          <ul class="list">
+            <li>
+              Systematic skimming — This is meant to be a quick check of the
+              book by (1) reading the preface; (2) studying the table of
+              contents; (3) checking the index; and (4) reading the inside
+              jacket. This should give you sufficient knowledge to understand
+              the chapters in the book, pivotal to the author's argument. Dip in
+              here and there, but never with more than a paragraph or two.
+              Skimming helps you reach to a decision point: Does this book
+              deserve more of my time and attention? If not, you put it down.
+            </li>
+            <li>
+              Superficial reading — This is when you just read. Don't ponder the
+              argument, don't look things up, don't write in the margins. If you
+              don't understand something, move on. What you gain from this quick
+              read will help you later when you go back and put more effort into
+              reading. You now come to another decision point. Now that you have
+              a better understanding of the book's contents and its structure,
+              do you want to understand it?
+            </li>
+          </ul>
+          <h2>3. Analytical Reading</h2>
+          <p>
+            Francis Bacon once remarked, “some books are to be tasted, others to
+            be swallowed, and some few to be chewed and digested.”
+          </p>
+          <p>
+            You can think of analytical reading as doing that chewing and
+            digesting. This is doing the work.
+          </p>
+          <p>Analytical reading is a thorough reading.</p>
+          <p>
+            If inspectional reading is the best you can do quickly, this is the
+            best reading you can do given time.
+          </p>
+          <h3>There are four rules to Analytical Reading</h3>
+          <ul class="list">
+            <li>Classify the book according to kind and subject matter.</li>
+            <li>State what the whole book is about with the utmost brevity.</li>
+            <li>
+              Enumerate its major parts in their order and relation, and outline
+              these parts as you have outlined the whole.
+            </li>
+            <li>
+              Define the problem or problems the author is trying to solve.
+            </li>
+          </ul>
+          <p>
+            You'll probably notice that while those sound pretty easy, they
+            involve a lot of work. Luckily the inspectional reading you've
+            already done has primed you for this.
+          </p>
+          <h2>4. Syntopical Reading</h2>
+          <p>
+            This is also known as comparative reading, and it represents the
+            most demanding and difficult reading of all. Syntopical Reading
+            involves reading many books on the same subject and comparing and
+            contrasting ideas, vocabulary, and arguments.
+          </p>
+          <p>
+            This task is undertaken by identifying relevant passages,
+            translating the terminology, framing and ordering the questions that
+            need answering, defining the issues, and having a conversation with
+            the responses.
+          </p>
+          <p>
+            The goal is not to achieve an overall understanding of any
+            particular book, but rather to understand the subject and develop a
+            deep fluency.
+          </p>
+          <p>
+            This is all about identifying and filling in your knowledge gaps.
+          </p>
+          <h3>There are five steps to syntopical reading:</h3>
+          <ul class="list">
+            <li>
+              Finding the Relevant Passages — You need to find the right books
+              and then the passages that are most relevant to filling your
+              needs. So the first step is an inspectional reading of all the
+              works that you have identified as relevant.
+            </li>
+            <li>
+              Bringing the Author to Terms — In analytical reading, you must
+              identify the keywords and how they are used by the author. This is
+              fairly straightforward. The process becomes more complicated now
+              as each author has probably used different terms and concepts to
+              frame their argument. Now the onus is on you to establish the
+              terms. Rather than using the author's language, you must use your
+              own. In short, this is an exercise in translation and synthesis.
+            </li>
+            <li>
+              Getting the Questions Clear — Rather than focus on the problems
+              the author is trying to solve, you need to focus on the questions
+              that you want answered. Just as we must establish our own
+              terminology, so too must we establish our own propositions by
+              shedding light on our problems to which the authors provide
+              answers. It's important to frame the questions in such a way that
+              all or most of the authors can be interpreted as providing
+              answers. Sometimes we might not get an answer to our questions
+              because they might not have been seen as questions by the authors.
+            </li>
+            <li>
+              Defining the Issues — If you've asked a clear question to which
+              there are multiple answers then an issue has been defined.
+              Opposing answers, now translated into your terms, must be ordered
+              in relation to one another. Understanding multiple perspectives
+              within an issue helps you form an intelligent opinion.
+            </li>
+            <li>
+              Analyzing the Discussion — It's presumptuous to expect we'll find
+              a single unchallenged truth to any of our questions. Our answer is
+              the conflict of opposing answers. The value is the discussion you
+              have with these authors. You can now have an informed opinion.
+            </li>
+          </ul>
         </div>
       </div>
       <div class="music">
