--- a/blog3.html
+++ b/blog3.html
@@ -20,20 +20,104 @@
         <video autoplay loop muted src="final_video.mp4"></video>
       </div>
       <div class="overtext">
-        <h1 class="text text-gradient">How to CODE?</h1>
+        <h1 class="text text-gradient">How to Wake up early?</h1>
         <div class="content">
+          <h2>8 Genius Tips for Waking Up Early</h2>
           <p>
-            Go to the YouTube website and log in to your account, if needed.
+            Early morning wake-ups can be difficult, as the thought of sleeping
+            in is usually a much more appealing option. However, waking up early
+            boasts positive health benefits, including better concentration,
+            improved quality of sleep, long-lasting energy, productivity and
+            more
           </p>
-        </div>
-        <div class="content">
-          <p>Click "CUSTOMIZE CHANNEL"</p>
-        </div>
-        <div class="content-img">
-          <img
-            src="https://colony-recorder.s3-accelerate.amazonaws.com/files/2021-11-18/35e65080-aab9-4cf3-abba-71f4f46bae8e/user_cropped_screenshot.jpeg?AWSAccessKeyId=AKIA2JDELI434TBIMF7V&Signature=fAdByU5VLwji0ZY8jEmS193P%2Flo%3D&Expires=1649628076"
-            alt="error"
-          />
+          <p>
+            Waking up early takes commitment, but it's possible to turn even the
+            latest riser into an early bird.
+          </p>
+          <h4>
+            Here are some simple tips to help you get in the habit of waking up
+            early:
+          </h4>
+          <ol class="list">
+            <li>Set an earlier bedtime</li>
+            <p>
+              Training your body to fall asleep earlier may help you rise
+              earlier each morning. Most adults should aim to get between seven
+              and nine hours of sleep each night - anything less than that can
+              cause you to struggle with waking up early.
+            </p>
+            <li>Unplug before bed</li>
+            <p>
+              “Unplugging” from smartphones and laptops about 30 minutes before
+              bed can contribute to a better night of sleep. According to The
+              Sleep Judge, the blue light emitted from screens can alter your
+              body's natural melatonin levels, making it more difficult to fall
+              asleep. An earlier bedtime with zero interference from tech can
+              leave you feeling happier and more energized the next day.
+            </p>
+            <li>Avoid late-night snacking</li>
+            <p>
+              While some studies have shown that snacking close to bedtime can
+              help dull any hunger pains that may appear overnight, others have
+              shown that it can cause less enjoyable symptoms such as acid
+              reflux. It's easy to confuse hunger with tiredness, so instead,
+              ditch the snacks and save your appetite for breakfast.
+            </p>
+            <li>Avoid sugary energy drinks and coffee</li>
+            <p>
+              Energy drinks and coffee may give you the extra boost you need to
+              study, but ingesting large amounts of sugar or caffeine before bed
+              can make it more challenging to fall asleep and stay asleep.
+              Limiting consumption of sugary sodas, energy drinks and coffee has
+              been proven to produce healthier sleeping habits. Try switching to
+              water or tea before bed to keep yourself hydrated.
+            </p>
+            <li>Silence your phone</li>
+            <p>
+              Turn off your phone ringer or activate “do not disturb” mode
+              before bed. Notifications can wake you in the middle of the night
+              and tempt you to check your phone, which will disrupt your sleep
+              cycle. That text message or funny meme will still be there in the
+              morning, so do yourself a favor and completely disconnect before
+              bed.
+            </p>
+            <li>Avoid all-nighters</li>
+            <p>
+              Skipping a night's sleep to finish an assignment is not a wise
+              choice. Not only can it lead to exhaustion the next morning, lack
+              of sleep can also inhibit your body's ability to function
+              properly. According to Vice, a recent study reported that someone
+              who goes a night without sleep will often end up with the
+              cognitive impairment of an individual who drank to the legal
+              limit. This proves just how important sleep is to our bodies. If
+              you have a big deadline approaching, avoid procrastinating so you
+              won't have to pull an all-nighter to finish your work. You will
+              quickly realize the lack of sleep is not worth it.
+            </p>
+            <li>Sleep with your curtains open</li>
+            <p>
+              Leave your blinds or curtains slightly open before going to bed.
+              This way, sunlight can stream through and help you wake up more
+              naturally. On sunny days, this can be an effective strategy.
+            </p>
+            <li>Place your alarm clock across the room</li>
+            <p>
+              To avoid snoozing your alarm, place your phone or alarm clock
+              across the room from where your bed is. This way, when your alarm
+              goes off, you'll be forced to get out of bed to silence it.
+              Without the temptation of snoozing your alarm, you'll be up and at
+              'em right on time.
+            </p>
+            <p>
+              Training your body to wake up early will take time, so don't
+              expect to be able to wake up at 5 a.m. every day just yet. Try
+              implementing small changes into your routine to make early wakeups
+              feasible, such as setting an earlier bedtime, moving the location
+              of your alarm clock or ditching snacks and sugary drinks before
+              bed. With these small changes, your body will eventually get in
+              the habit of getting up early.
+            </p>
+          </ol>
         </div>
       </div>
       <div class="music">
