--- a/index.html
+++ b/index.html
@@ -28,37 +28,26 @@
       <div id="blog1" class="blog overtext">
         <h2>How to CODE?</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum,
-          provident quae adipisci qui quia dicta eius nisi, ea labore voluptas
-          porro doloribus laudantium nobis voluptatem veniam ipsum laborum
-          sapiente fugiat?
+          There are several different methods and paths you can use when
+          learning how to write code. Here are our suggestions for some steps to
+          get you started:
         </p>
       </div>
       <!-- </a> -->
       <div id="blog2" class="blog overtext">
-        <h2>How to live</h2>
+        <h2>How to READ?</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-          numquam optio labore quae itaque officia vel sunt perferendis, impedit
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eius,
-          laboriosam quae corrupti, libero, laudantium quis obcaecati delectus
-          molestiae voluptate magnam consequuntur reiciendis et asperiores
-          similique quod magni? Minus nesciunt odit necessitatibus aliquam
-          architecto est incidunt maiores amet veritatis cum impedit
-          dignissimos, illo error molestiae rem animi iusto, quas id. ut.
+          The Four Levels of Reading Mortimer Adler literally wrote the book on
+          reading. Adler identifies four levels of reading:
         </p>
       </div>
       <div id="blog3" class="blog overtext">
-        <h2>How to CODE?</h2>
+        <h2>How to Wake up early?</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-          numquam optio labore quae itaque officia vel sunt perferendis, impedit
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque eius,
-          laboriosam quae corrupti, libero, laudantium quis obcaecati delectus
-          molestiae voluptate magnam consequuntur reiciendis et asperiores
-          similique quod magni? Minus nesciunt odit necessitatibus aliquam
-          architecto est incidunt maiores amet veritatis cum impedit
-          dignissimos, illo error molestiae rem animi iusto, quas id. ut.
+          Early morning wake-ups can be difficult, as the thought of sleeping in
+          is usually a much more appealing option. However, waking up early
+          boasts positive health benefits, including better concentration,
+          improved quality of sleep, long-lasting energy, productivity and more
         </p>
       </div>
       <div class="music">
