--- a/blog1.html
+++ b/blog1.html
@@ -21,117 +21,120 @@
       </div>
       <div class="overtext">
         <h1 class="text text-gradient">How to CODE ?</h1>
-      </div>
-      <div class="content">
-        <h2>Write Code in 6 Steps</h2>
-        <p>
-          There are several different methods and paths you can use when
-          learning how to write code. Here are our suggestions for some steps to
-          get you started:
-        </p>
-        <ol class="list">
-          <li>Set Goals</li>
-          <li>Choose a language</li>
-          <li>Find a resource</li>
-          <li>Download an Editor</li>
-          <li>Start practicing</li>
-          <li>Continue learning</li>
-        </ol>
-        <h2>1.Set Goals</h2>
-        <p>
-          Before you begin writing code, it is a good idea to take some time to
-          consider your goals. Are you hoping to find a new job? Are you looking
-          to acquire a valuable skill? Do you want to earn some extra money as a
-          freelancer? Your goals will affect your decisions as to where and how
-          you learn to code and how much time you will need to dedicate to this
-          pursuit.
-        </p>
-        <p>
-          For example, if you want to become a certified expert in coding, you
-          will probably need to get a Bachelor's Degree in Programming, Software
-          Development or a similar field. However, if your goal in pursuing
-          coding is just to learn an interesting new skill, you should be able
-          to find all the information you need using free resources. The most
-          important part of setting goals is determining how much time and
-          energy you will be able to dedicate to coding
-        </p>
-        <h2>2.Choose a language</h2>
-        <p>
-          After determining your goals, you will need to choose a coding
-          language to learn. The specific language you pick is not as important
-          as you may think. Any computer language that you choose to study will
-          introduce you to important coding fundamentals like structures,
-          commands and programming logic. You might not end up using your first
-          language as a part of your job, but you will gain valuable experience
-          through the process of mastering it.
-        </p>
-        <p>
-          There are dozens of coding languages that are used for a variety of
-          different projects. If you want to code websites, you should learn
-          HTML, JavaScript or CSS. If you want to design analysis or artificial
-          intelligence programs, you will need to know Python. If you are
-          interested in creating personal computer applications, a basic
-          language like C++ would be a good choice. You will need to do some
-          experimenting and conduct your own research to find a language that
-          will work well for you.
-        </p>
-        <h2>3.Find a resource</h2>
-        <p>
-          Once you know what you want to learn, it is time to consider your
-          resources. There are dozens of quality options available for people
-          who want to learn to code. If you are hoping to land your dream job in
-          the computer programming industry, you may want to start by pursuing a
-          computer science degree on a college campus.
-        </p>
-        <p>
-          If you prefer to learn in the comfort of your own home, you can enroll
-          in an online program through a university or private service. If you
-          enjoy teaching yourself, you might find borrowing computer programming
-          books from the library, watching how-to videos online or using other
-          free resources to be your best option. The effectiveness and
-          practicality of each resource will depend on your individual learning
-          style and schedule.
-        </p>
-        <h2>4.Download an Editor</h2>
-        <p>
-          To write code on your personal computer, you will need a text editing
-          program. At their most basic level, most programming languages are
-          plain text, which means they can be written using almost any simple
-          text editor. Common options include Notepad++, TextWrangler and JEdit.
-          Many programming languages have downloadable editing programs that are
-          created specifically for that language. The best program for you will
-          depend on your budget and which language you plan to use most often.
-        </p>
-        <h2>5.Start practicing</h2>
-        <p>
-          Once you have picked up some skills by taking classes or watching
-          online tutorials, you will need to put your knowledge into practice.
-          One of the best ways to learn to code is by simply doing, even if you
-          find yourself making mistakes. One of the easiest ways to start is by
-          picking a simple project that you think you will be able to complete.
-          This could be designing an HTML website, creating a database function
-          with PHP or writing a simple program using any of the basic languages.
-        </p>
-        <p>
-          There are hundreds of how-to videos and articles available explaining
-          how to complete tasks like these using a variety of languages. Using
-          your resources, practice writing code for your project until you know
-          the process well enough to complete it on your own. Then, you can move
-          on to something even more complex. Coding is a skill that comes
-          through repetition and the more you practice, the easier it will be.
-        </p>
-        <h2>6.Continue learning</h2>
-        <p>
-          As your coding proficiency grows, you will be qualified to advertise
-          your services, apply for jobs and even pursue certification. As you go
-          about finding ways to use your coding skills, it is important that you
-          continue to learn. The computer industry advances and evolves each
-          year, with new programs and techniques regularly being invented and
-          implemented. To remain competitive and informed, you will need to look
-          for ways to continue improving your skills. Methods for writing code
-          will advance and develop in the years to come, so your skillset will
-          need to evolve at the same rate.
-        </p>
+        <div class="content">
+          <h2>Write Code in 6 Steps</h2>
+          <p>
+            There are several different methods and paths you can use when
+            learning how to write code. Here are our suggestions for some steps
+            to get you started:
+          </p>
+          <ol class="list">
+            <li>Set Goals</li>
+            <li>Choose a language</li>
+            <li>Find a resource</li>
+            <li>Download an Editor</li>
+            <li>Start practicing</li>
+            <li>Continue learning</li>
+          </ol>
+          <h2>1.Set Goals</h2>
+          <p>
+            Before you begin writing code, it is a good idea to take some time
+            to consider your goals. Are you hoping to find a new job? Are you
+            looking to acquire a valuable skill? Do you want to earn some extra
+            money as a freelancer? Your goals will affect your decisions as to
+            where and how you learn to code and how much time you will need to
+            dedicate to this pursuit.
+          </p>
+          <p>
+            For example, if you want to become a certified expert in coding, you
+            will probably need to get a Bachelor's Degree in Programming,
+            Software Development or a similar field. However, if your goal in
+            pursuing coding is just to learn an interesting new skill, you
+            should be able to find all the information you need using free
+            resources. The most important part of setting goals is determining
+            how much time and energy you will be able to dedicate to coding
+          </p>
+          <h2>2.Choose a language</h2>
+          <p>
+            After determining your goals, you will need to choose a coding
+            language to learn. The specific language you pick is not as
+            important as you may think. Any computer language that you choose to
+            study will introduce you to important coding fundamentals like
+            structures, commands and programming logic. You might not end up
+            using your first language as a part of your job, but you will gain
+            valuable experience through the process of mastering it.
+          </p>
+          <p>
+            There are dozens of coding languages that are used for a variety of
+            different projects. If you want to code websites, you should learn
+            HTML, JavaScript or CSS. If you want to design analysis or
+            artificial intelligence programs, you will need to know Python. If
+            you are interested in creating personal computer applications, a
+            basic language like C++ would be a good choice. You will need to do
+            some experimenting and conduct your own research to find a language
+            that will work well for you.
+          </p>
+          <h2>3.Find a resource</h2>
+          <p>
+            Once you know what you want to learn, it is time to consider your
+            resources. There are dozens of quality options available for people
+            who want to learn to code. If you are hoping to land your dream job
+            in the computer programming industry, you may want to start by
+            pursuing a computer science degree on a college campus.
+          </p>
+          <p>
+            If you prefer to learn in the comfort of your own home, you can
+            enroll in an online program through a university or private service.
+            If you enjoy teaching yourself, you might find borrowing computer
+            programming books from the library, watching how-to videos online or
+            using other free resources to be your best option. The effectiveness
+            and practicality of each resource will depend on your individual
+            learning style and schedule.
+          </p>
+          <h2>4.Download an Editor</h2>
+          <p>
+            To write code on your personal computer, you will need a text
+            editing program. At their most basic level, most programming
+            languages are plain text, which means they can be written using
+            almost any simple text editor. Common options include Notepad++,
+            TextWrangler and JEdit. Many programming languages have downloadable
+            editing programs that are created specifically for that language.
+            The best program for you will depend on your budget and which
+            language you plan to use most often.
+          </p>
+          <h2>5.Start practicing</h2>
+          <p>
+            Once you have picked up some skills by taking classes or watching
+            online tutorials, you will need to put your knowledge into practice.
+            One of the best ways to learn to code is by simply doing, even if
+            you find yourself making mistakes. One of the easiest ways to start
+            is by picking a simple project that you think you will be able to
+            complete. This could be designing an HTML website, creating a
+            database function with PHP or writing a simple program using any of
+            the basic languages.
+          </p>
+          <p>
+            There are hundreds of how-to videos and articles available
+            explaining how to complete tasks like these using a variety of
+            languages. Using your resources, practice writing code for your
+            project until you know the process well enough to complete it on
+            your own. Then, you can move on to something even more complex.
+            Coding is a skill that comes through repetition and the more you
+            practice, the easier it will be.
+          </p>
+          <h2>6.Continue learning</h2>
+          <p>
+            As your coding proficiency grows, you will be qualified to advertise
+            your services, apply for jobs and even pursue certification. As you
+            go about finding ways to use your coding skills, it is important
+            that you continue to learn. The computer industry advances and
+            evolves each year, with new programs and techniques regularly being
+            invented and implemented. To remain competitive and informed, you
+            will need to look for ways to continue improving your skills.
+            Methods for writing code will advance and develop in the years to
+            come, so your skillset will need to evolve at the same rate.
+          </p>
+        </div>
       </div>
       <div class="music">
         <div><h2>Click to Play/Pause</h2></div>
